[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["expitc <39050604+EXPITC@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
numpy = "^1.22.2"
discord = "^2.0.0"
Flask = "^2.2.2"
praw = "^7.6.0"
asyncpraw = "^7.6.0"
image = "^1.5.33"
Pillow = "^9.4.0"
pil-compat = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
